// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LocalStorage> does NOT set initial data when onMount prop is set 1`] = `Object {}`;

exports[`<LocalStorage> puts value to localStorage 1`] = `
Object {
  "foo": "\\"bar\\"",
}
`;

exports[`<LocalStorage> serializes an object 1`] = `
Object {
  "foo": "{\\"key\\":[1,2,3]}",
}
`;
